force-app/main/default/objects/Contact/fields/ACQ_203__c.field-meta.xml
<CustomField>
    <fullName>ACQ_203__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACQ 203</label>
    <type>Checkbox</type>
</CustomField>