force-app/main/default/objects/Contact/fields/Ambassador_Status__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Status__c</fullName>
    <label>Ambassador Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Options are Potential Ambassador</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Annual Donor Ambassador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>