force-app/main/default/objects/Contact/fields/CAP__c.field-meta.xml
<CustomField>
    <fullName>CAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP</label>
    <type>Checkbox</type>
</CustomField>