force-app/main/default/objects/Contact/fields/CASP__c.field-meta.xml
<CustomField>
    <fullName>CASP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASP</label>
    <type>Checkbox</type>
</CustomField>