force-app/main/default/objects/Contact/fields/Certified_Ethical_Hacker__c.field-meta.xml
<CustomField>
    <fullName>Certified_Ethical_Hacker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Ethical Hacker</label>
    <type>Checkbox</type>
</CustomField>