force-app/main/default/objects/Contact/fields/CISA__c.field-meta.xml
<CustomField>
    <fullName>CISA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CISA</label>
    <type>Checkbox</type>
</CustomField>