force-app/main/default/objects/Contact/fields/CISM__c.field-meta.xml
<CustomField>
    <fullName>CISM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CISM</label>
    <type>Checkbox</type>
</CustomField>