force-app/main/default/objects/Contact/fields/CISSP__c.field-meta.xml
<CustomField>
    <fullName>CISSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CISSP</label>
    <type>Checkbox</type>
</CustomField>