force-app/main/default/objects/Contact/fields/CON_090__c.field-meta.xml
<CustomField>
    <fullName>CON_090__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CON 090</label>
    <type>Checkbox</type>
</CustomField>