force-app/main/default/objects/Contact/fields/CON_144__c.field-meta.xml
<CustomField>
    <fullName>CON_144__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CON 144</label>
    <type>Checkbox</type>
</CustomField>