force-app/main/default/objects/Contact/fields/CON_170__c.field-meta.xml
<CustomField>
    <fullName>CON_170__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CON 170</label>
    <type>Checkbox</type>
</CustomField>