force-app/main/default/objects/Contact/fields/Educator_Bio__c.field-meta.xml
<CustomField>
    <fullName>Educator_Bio__c</fullName>
    <label>Educator Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>