force-app/main/default/objects/Contact/fields/Hear_about_Disciple_Program__c.field-meta.xml
<CustomField>
    <fullName>Hear_about_Disciple_Program__c</fullName>
    <inlineHelpText>This information is from the BeADisciple online form.</inlineHelpText>
    <label>Hear about Disciple Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instructor teaching the class</fullName>
            </value>
            <value>
                <fullName>Social Media (Facebook, LinkedIn, Twitter)</fullName>
            </value>
            <value>
                <fullName>Through a friend</fullName>
            </value>
            <value>
                <fullName>Other Instructor</fullName>
            </value>
            <value>
                <fullName>Church Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>