force-app/main/default/objects/Contact/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <description>This is the department the prospect is interested in.</description>
    <inlineHelpText>This is the department the prospect is interested in.</inlineHelpText>
    <label>Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Courses</fullName>
            </value>
            <value>
                <fullName>Study App</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>