force-app/main/default/objects/Contact/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Date of last related task or event.</description>
    <formula>LastActivityDate</formula>
    <inlineHelpText>Date of last related task or event.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>