force-app/main/default/objects/Contact/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <description>Refers to a prospect&apos;s level of interest</description>
    <inlineHelpText>Refers to a prospect&apos;s level of interest</inlineHelpText>
    <label>Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>