force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Prospect&apos;s current progress within the donor outreach process.</description>
    <inlineHelpText>Prospect&apos;s current progress within the donor outreach process.</inlineHelpText>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Lead</fullName>
            </value>
            <value>
                <fullName>Lead - Inquiry</fullName>
            </value>
            <value>
                <fullName>Lead - Not Contacted</fullName>
            </value>
            <value>
                <fullName>Lead - Contacted</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>