force-app/main/default/objects/Contact/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leadership</label>
    <type>Checkbox</type>
</CustomField>