force-app/main/default/objects/Contact/fields/Link_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Id ,   FirstName  &amp; &quot; &quot; &amp;LastName )</formula>
    <inlineHelpText>Custom link to contact record</inlineHelpText>
    <label>Link to Contact</label>
    <type>Text</type>
</CustomField>