force-app/main/default/objects/Contact/fields/LSS_Black__c.field-meta.xml
<CustomField>
    <fullName>LSS_Black__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSS Black</label>
    <type>Checkbox</type>
</CustomField>