force-app/main/default/objects/Contact/fields/LSS_Green__c.field-meta.xml
<CustomField>
    <fullName>LSS_Green__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSS Green</label>
    <type>Checkbox</type>
</CustomField>