force-app/main/default/objects/Contact/fields/LSS_Yellow__c.field-meta.xml
<CustomField>
    <fullName>LSS_Yellow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LSS  Yellow</label>
    <type>Checkbox</type>
</CustomField>