force-app/main/default/objects/Contact/fields/PHR__c.field-meta.xml
<CustomField>
    <fullName>PHR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PHR</label>
    <type>Checkbox</type>
</CustomField>