force-app/main/default/objects/Contact/fields/Program_Management__c.field-meta.xml
<CustomField>
    <fullName>Program_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Management</label>
    <type>Checkbox</type>
</CustomField>