force-app/main/default/objects/Contact/fields/Project_Management_PMP__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_PMP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Management (PMP)</label>
    <type>Checkbox</type>
</CustomField>