force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Faculty/Facilitator</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>