force-app/main/default/objects/Contact/fields/SCID__c.field-meta.xml
<CustomField>
    <fullName>SCID__c</fullName>
    <description>Southwestern College ID</description>
    <inlineHelpText>Southwestern College ID</inlineHelpText>
    <label>SCID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>