force-app/main/default/objects/Contact/recordTypes/Ambassador.recordType-meta.xml
<RecordType>
    <fullName>Ambassador</fullName>
    <active>true</active>
    <label>Ambassador</label>
</RecordType>