force-app/main/default/objects/Contact/listViews/Ambassador_List.listView-meta.xml
<ListView>
    <fullName>Ambassador_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact</value>
    </filters>
    <label>Ambassador List</label>
</ListView>