force-app/main/default/objects/Contact/listViews/Test_Constant_Contact_Sync.listView-meta.xml
<ListView>
    <fullName>Test_Constant_Contact_Sync</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>lrand</value>
    </filters>
    <label>Test Constant Contact Sync</label>
</ListView>